<resources>
    <string name="app_name">SharedPreferenceDemo</string>
    <string name="action_settings">Settings</string>

    <string name="enter_message">Enter Your Message</string>
    <string name="adjust_font_size">Adjust Font Size</string>
    <string name="select_font_color">Select Font Color</string>
    <string name="red_color">Red</string>
    <string name="green_color">Green</string>
    <string name="blue_color">Blue</string>
    <string name="save_settings">Save Settings</string>
    <string name="clear_settings">Clear Settings</string>

    <string name="PREF_FILE">APP_PREF_FILE</string>
    <string name="FONT_SIZE">APP_FONT_SIZE</string>
    <string name="FONT_COLOR">APP_FONT_COLOR</string>
    <string name="TEXT_INFO">APP_TEXT_INFO</string>

</resources>
