<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="easyway2thi.com.sharedpreferencedemo.FirstActivity"
    tools:showIn="@layout/first_layout"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_message"
        android:textAppearance="?android:textAppearanceLarge"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/id_message"
        android:gravity="top"
        android:layout_weight="0.7"
        android:background="#b8b8b8"/>

    <TextView
        android:layout_marginTop="6dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adjust_font_size"
        android:textAppearance="?android:textAppearanceLarge"
        />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:id="@+id/seek_bar"
        android:background="#b8b8b8"/>

    <TextView
        android:layout_marginTop="6dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_font_color"
        android:textAppearance="?android:textAppearanceLarge"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="#b8b8b8">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_red_color"
            android:text="@string/red_color"
            android:onClick="changeColor"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_green_color"
            android:text="@string/green_color"
            android:onClick="changeColor"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_blue_color"
            android:text="@string/blue_color"
            android:onClick="changeColor"/>

    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/id_save"
        android:text="@string/save_settings"
        android:layout_gravity="center_horizontal"
        android:onClick="saveSittings"
        android:layout_marginBottom="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/id_clear"
        android:text="@string/clear_settings"
        android:layout_gravity="center_horizontal"
        android:onClick="clearSittings" />

</LinearLayout>
